# app/document/swagger.json
@@ -15,7 +15,7 @@
         "auth-login": {
             "post": {
                 "tags": [
-                    "oauth"
+                    "\u7528\u6237\u76f8\u5173"
                 ],
                 "summary": "\u767b\u5f55",
                 "description": "\u7528\u6237\u767b\u5f55,\u767b\u5f55\u6210\u529f\u540e\u5c06\u8fd4\u56de\u6570\u636e\u4e3a\u5230\u671f\u7684\u65f6\u95f4\u6233\uff0c\u5426\u5219\u5c06\u4f1a\u63d0\u793a\u9519\u8bef\uff0c\u5e76\u8fd4\u56de\u9519\u8bef\u4ee3\u7801",
@@ -52,7 +52,7 @@
         "auth-register": {
             "post": {
                 "tags": [
-                    "oauth"
+                    "\u7528\u6237\u76f8\u5173"
                 ],
                 "summary": "\u6ce8\u518c",
                 "description": "\u7528\u6237\u6ce8\u518c\u529f\u80fd, \u6b64\u63a5\u53e3\u524d\uff0c\u8bf7\u5148\u83b7\u53d6\u6ce8\u518c\u9875\u9762\u7684\u63a5\u53e3",
@@ -103,7 +103,7 @@
         "auth-pregister": {
             "get": {
                 "tags": [
-                    "oauth"
+                    "\u7528\u6237\u76f8\u5173"
                 ],
                 "summary": "\u6ce8\u518c\u4e4b\u524d\uff0c\u7528\u4e8e\u83b7\u53d6tagid",
                 "description": "\u83b7\u53d6\u6ce8\u518c\u9875\u9762\u7684\u63a5\u53e3",
@@ -124,7 +124,7 @@
         "auth-changPassword": {
             "post": {
                 "tags": [
-                    "oauth"
+                    "\u7528\u6237\u76f8\u5173"
                 ],
                 "summary": "\u66f4\u6539\u7528\u6237\u767b\u5f55\u5bc6\u7801",
                 "description": "\u66f4\u6539\u7528\u6237\u767b\u5f55\u5bc6\u7801",
@@ -168,7 +168,7 @@
         "auth-resetPassword": {
             "post": {
                 "tags": [
-                    "oauth"
+                    "\u7528\u6237\u76f8\u5173"
                 ],
                 "summary": "\u627e\u56de\u7528\u6237\u767b\u5f55\u5bc6\u7801",
                 "description": "\u627e\u56de\u7528\u6237\u767b\u5f55\u5bc6\u7801",
@@ -212,7 +212,7 @@
         "auth-blind": {
             "post": {
                 "tags": [
-                    "oauth"
+                    "\u7528\u6237\u76f8\u5173"
                 ],
                 "summary": "\u7ed1\u5b9a\u624b\u673a\u53f7",
                 "description": "\u7ed1\u5b9a\u624b\u673a\u53f7",
@@ -253,10 +253,70 @@
                 }
             }
         },
+        "code-whenResetPassword": {
+            "post": {
+                "tags": [
+                    "\u9a8c\u8bc1\u7801"
+                ],
+                "summary": "\u3010\u91cd\u7f6e\u5bc6\u7801\u3011\u9a8c\u8bc1\u7801",
+                "description": "\u83b7\u53d6\u91cd\u7f6e\u5bc6\u7801\uff0c\u6240\u7528\u9a8c\u8bc1\u7801",
+                "operationId": "whenResetPassword",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "phone",
+                        "in": "formData",
+                        "description": "\u624b\u673a\u53f7",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{'state':{\u7ed3\u679c\u4ee3\u7801},'result':{\u8fd4\u56de\u7ed3\u679c}}"
+                    }
+                }
+            }
+        },
+        "code-whenBlinkPassword": {
+            "post": {
+                "tags": [
+                    "\u9a8c\u8bc1\u7801"
+                ],
+                "summary": "\u3010\u7ed1\u5b9a\u624b\u673a\u3011\u9a8c\u8bc1\u7801",
+                "description": "\u83b7\u53d6\u7ed1\u5b9a\u624b\u673a\uff0c\u6240\u7528\u9a8c\u8bc1\u7801",
+                "operationId": "whenBlinkPassword",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "phone",
+                        "in": "formData",
+                        "description": "\u624b\u673a\u53f7",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{'state':{\u7ed3\u679c\u4ee3\u7801},'result':{\u8fd4\u56de\u7ed3\u679c}}"
+                    }
+                }
+            }
+        },
         "index-banner": {
             "get": {
                 "tags": [
-                    "index"
+                    "\u9996\u9875\u76f8\u5173"
                 ],
                 "summary": "\u8f6e\u64ad\u56fe",
                 "description": "\u83b7\u53d6\u8f6e\u64ad\u56fe",
@@ -277,7 +337,7 @@
         "index-hdzl": {
             "get": {
                 "tags": [
-                    "index"
+                    "\u9996\u9875\u76f8\u5173"
                 ],
                 "summary": "\u83b7\u53d6\u4e92\u52a8\u4e13\u680f\u4fe1\u606f",
                 "description": "\u83b7\u53d6\u4e92\u52a8\u4e13\u680f\u4fe1\u606f",
@@ -298,7 +358,7 @@
         "index-quiz": {
             "post": {
                 "tags": [
-                    "index"
+                    "\u9996\u9875\u76f8\u5173"
                 ],
                 "summary": "\u83b7\u53d6\u4e92\u52a8\u4e13\u680f\u3010\u5b50\u7248\u5757\u3011\u4fe1\u606f",
                 "description": "\u83b7\u53d6\u4e92\u52a8\u4e13\u680f\u3010\u5b50\u7248\u5757\u3011\u4fe1\u606f",
@@ -328,7 +388,7 @@
         "index-tabs": {
             "get": {
                 "tags": [
-                    "index"
+                    "\u9996\u9875\u76f8\u5173"
                 ],
                 "summary": "\u83b7\u53d6\u4fe1\u606f\u6d41\u5206\u7c7b\u4fe1\u606f",
                 "description": "\u83b7\u53d6\u4fe1\u606f\u6d41\u5206\u7c7b\u4fe1\u606f",
@@ -349,7 +409,7 @@
         "index-information": {
             "post": {
                 "tags": [
-                    "index"
+                    "\u9996\u9875\u76f8\u5173"
                 ],
                 "summary": "\u83b7\u53d6\u4fe1\u606f\u6d41\u5185\u5bb9",
                 "description": "\u83b7\u53d6\u4fe1\u606f\u6d41\u5185\u5bb9\uff0c\u9700\u4f20\u5165\u3010\u677f\u5757ID\uff0c\u548c\u9875\u7801ID\u3011",
